// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic 1`] = `
{
  "localeLoaders": {
    "en": [
      {
        "cache": true,
        "importString": "import locale_en_46json_f7535dc0 from "#nuxt-i18n/f7535dc0";",
        "key": ""locale_en_46json_f7535dc0"",
        "load": "() => Promise.resolve(locale_en_46json_f7535dc0)",
        "relative": "../en.json",
        "specifier": "#nuxt-i18n/f7535dc0",
      },
    ],
    "fr": [
      {
        "cache": true,
        "importString": "import locale_fr_46json_3d83f3b3 from "#nuxt-i18n/3d83f3b3";",
        "key": ""locale_fr_46json_3d83f3b3"",
        "load": "() => Promise.resolve(locale_fr_46json_3d83f3b3)",
        "relative": "../fr.json",
        "specifier": "#nuxt-i18n/3d83f3b3",
      },
    ],
    "ja": [
      {
        "cache": true,
        "importString": "import locale_ja_46json_5843ecf1 from "#nuxt-i18n/5843ecf1";",
        "key": ""locale_ja_46json_5843ecf1"",
        "load": "() => Promise.resolve(locale_ja_46json_5843ecf1)",
        "relative": "../ja.json",
        "specifier": "#nuxt-i18n/5843ecf1",
      },
    ],
  },
  "normalizedLocales": [
    {
      "code": "en",
    },
    {
      "code": "ja",
    },
    {
      "code": "fr",
    },
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "i18nModules": [],
    "lazy": false,
    "locales": [],
  },
  "vueI18nConfigs": [
    {
      "importer": "() => import("#nuxt-i18n/c3216fe6" /* webpackChunkName: "config_to_c3216fe6" */)",
      "relative": "../../path/to",
      "specifier": "#nuxt-i18n/c3216fe6",
    },
  ],
}
`;

exports[`files with cache configuration 1`] = `
{
  "localeLoaders": {
    "en": [
      {
        "cache": true,
        "importString": "import locale_en_46json_63d117da from "#nuxt-i18n/63d117da";",
        "key": ""locale_en_46json_63d117da"",
        "load": "() => import("#nuxt-i18n/63d117da" /* webpackChunkName: "locale_en_46json_63d117da" */)",
        "relative": "../../Users/bobbiegoede/www/projects/i18n/locales/en.json",
        "specifier": "#nuxt-i18n/63d117da",
      },
    ],
    "es": [
      {
        "cache": false,
        "importString": "import locale_es_46json_2c8c242f from "#nuxt-i18n/2c8c242f";",
        "key": ""locale_es_46json_2c8c242f"",
        "load": "() => import("#nuxt-i18n/2c8c242f" /* webpackChunkName: "locale_es_46json_2c8c242f" */)",
        "relative": "../../Users/bobbiegoede/www/projects/i18n/locales/es.json",
        "specifier": "#nuxt-i18n/2c8c242f",
      },
    ],
    "es-AR": [
      {
        "cache": false,
        "importString": "import locale_es_46json_2c8c242f from "#nuxt-i18n/2c8c242f";",
        "key": ""locale_es_46json_2c8c242f"",
        "load": "() => import("#nuxt-i18n/2c8c242f" /* webpackChunkName: "locale_es_46json_2c8c242f" */)",
        "relative": "../../Users/bobbiegoede/www/projects/i18n/locales/es.json",
        "specifier": "#nuxt-i18n/2c8c242f",
      },
      {
        "cache": true,
        "importString": "import locale_es_45AR_46json_3eb89cf5 from "#nuxt-i18n/3eb89cf5";",
        "key": ""locale_es_45AR_46json_3eb89cf5"",
        "load": "() => import("#nuxt-i18n/3eb89cf5" /* webpackChunkName: "locale_es_45AR_46json_3eb89cf5" */)",
        "relative": "../../Users/bobbiegoede/www/projects/i18n/locales/es-AR.json",
        "specifier": "#nuxt-i18n/3eb89cf5",
      },
    ],
    "fr": [
      {
        "cache": true,
        "importString": "import locale_fr_46json_b22e5b33 from "#nuxt-i18n/b22e5b33";",
        "key": ""locale_fr_46json_b22e5b33"",
        "load": "() => import("#nuxt-i18n/b22e5b33" /* webpackChunkName: "locale_fr_46json_b22e5b33" */)",
        "relative": "../../Users/bobbiegoede/www/projects/i18n/locales/fr.json",
        "specifier": "#nuxt-i18n/b22e5b33",
      },
    ],
    "ja": [
      {
        "cache": true,
        "importString": "import locale_ja_46json_a90c8f84 from "#nuxt-i18n/a90c8f84";",
        "key": ""locale_ja_46json_a90c8f84"",
        "load": "() => import("#nuxt-i18n/a90c8f84" /* webpackChunkName: "locale_ja_46json_a90c8f84" */)",
        "relative": "../../Users/bobbiegoede/www/projects/i18n/locales/ja.json",
        "specifier": "#nuxt-i18n/a90c8f84",
      },
    ],
  },
  "normalizedLocales": [
    {
      "code": "en",
    },
    {
      "code": "ja",
    },
    {
      "code": "fr",
    },
    {
      "code": "es",
    },
    {
      "code": "es-AR",
    },
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "i18nModules": [],
    "lazy": true,
    "locales": [],
  },
  "vueI18nConfigs": [
    {
      "importer": "() => import("#nuxt-i18n/c3216fe6" /* webpackChunkName: "config_to_c3216fe6" */)",
      "relative": "../../path/to",
      "specifier": "#nuxt-i18n/c3216fe6",
    },
  ],
}
`;

exports[`lazy 1`] = `
{
  "localeLoaders": {
    "en": [
      {
        "cache": true,
        "importString": "import locale_en_46json_f7535dc0 from "#nuxt-i18n/f7535dc0";",
        "key": ""locale_en_46json_f7535dc0"",
        "load": "() => import("#nuxt-i18n/f7535dc0" /* webpackChunkName: "locale_en_46json_f7535dc0" */)",
        "relative": "../en.json",
        "specifier": "#nuxt-i18n/f7535dc0",
      },
    ],
    "fr": [
      {
        "cache": true,
        "importString": "import locale_fr_46json_3d83f3b3 from "#nuxt-i18n/3d83f3b3";",
        "key": ""locale_fr_46json_3d83f3b3"",
        "load": "() => import("#nuxt-i18n/3d83f3b3" /* webpackChunkName: "locale_fr_46json_3d83f3b3" */)",
        "relative": "../fr.json",
        "specifier": "#nuxt-i18n/3d83f3b3",
      },
    ],
    "ja": [
      {
        "cache": true,
        "importString": "import locale_ja_46json_5843ecf1 from "#nuxt-i18n/5843ecf1";",
        "key": ""locale_ja_46json_5843ecf1"",
        "load": "() => import("#nuxt-i18n/5843ecf1" /* webpackChunkName: "locale_ja_46json_5843ecf1" */)",
        "relative": "../ja.json",
        "specifier": "#nuxt-i18n/5843ecf1",
      },
    ],
  },
  "normalizedLocales": [
    {
      "code": "en",
    },
    {
      "code": "ja",
    },
    {
      "code": "fr",
    },
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "i18nModules": [],
    "lazy": true,
    "locales": [],
  },
  "vueI18nConfigs": [
    {
      "importer": "() => import("#nuxt-i18n/c3216fe6" /* webpackChunkName: "config_to_c3216fe6" */)",
      "relative": "../../path/to",
      "specifier": "#nuxt-i18n/c3216fe6",
    },
  ],
}
`;

exports[`locale file in nested 1`] = `
{
  "localeLoaders": {
    "en": [
      {
        "cache": true,
        "importString": "import locale_main_46json_291f935f from "#nuxt-i18n/291f935f";",
        "key": ""locale_main_46json_291f935f"",
        "load": "() => import("#nuxt-i18n/291f935f" /* webpackChunkName: "locale_main_46json_291f935f" */)",
        "relative": "../en/main.json",
        "specifier": "#nuxt-i18n/291f935f",
      },
    ],
    "fr": [
      {
        "cache": true,
        "importString": "import locale_main_46json_7ba1ed37 from "#nuxt-i18n/7ba1ed37";",
        "key": ""locale_main_46json_7ba1ed37"",
        "load": "() => import("#nuxt-i18n/7ba1ed37" /* webpackChunkName: "locale_main_46json_7ba1ed37" */)",
        "relative": "../fr/main.json",
        "specifier": "#nuxt-i18n/7ba1ed37",
      },
    ],
    "ja": [
      {
        "cache": true,
        "importString": "import locale_main_46json_cfa671d1 from "#nuxt-i18n/cfa671d1";",
        "key": ""locale_main_46json_cfa671d1"",
        "load": "() => import("#nuxt-i18n/cfa671d1" /* webpackChunkName: "locale_main_46json_cfa671d1" */)",
        "relative": "../ja/main.json",
        "specifier": "#nuxt-i18n/cfa671d1",
      },
    ],
  },
  "normalizedLocales": [
    {
      "code": "en",
    },
    {
      "code": "ja",
    },
    {
      "code": "fr",
    },
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "i18nModules": [],
    "lazy": true,
    "locales": [],
  },
  "vueI18nConfigs": [
    {
      "importer": "() => import("#nuxt-i18n/c3216fe6" /* webpackChunkName: "config_to_c3216fe6" */)",
      "relative": "../../path/to",
      "specifier": "#nuxt-i18n/c3216fe6",
    },
  ],
}
`;

exports[`multiple files 1`] = `
{
  "localeLoaders": {
    "en": [
      {
        "cache": true,
        "importString": "import locale_en_46json_f7535dc0 from "#nuxt-i18n/f7535dc0";",
        "key": ""locale_en_46json_f7535dc0"",
        "load": "() => import("#nuxt-i18n/f7535dc0" /* webpackChunkName: "locale_en_46json_f7535dc0" */)",
        "relative": "../en.json",
        "specifier": "#nuxt-i18n/f7535dc0",
      },
    ],
    "es": [
      {
        "cache": true,
        "importString": "import locale_es_46json_234aa7ad from "#nuxt-i18n/234aa7ad";",
        "key": ""locale_es_46json_234aa7ad"",
        "load": "() => import("#nuxt-i18n/234aa7ad" /* webpackChunkName: "locale_es_46json_234aa7ad" */)",
        "relative": "../es.json",
        "specifier": "#nuxt-i18n/234aa7ad",
      },
    ],
    "es-AR": [
      {
        "cache": true,
        "importString": "import locale_es_46json_234aa7ad from "#nuxt-i18n/234aa7ad";",
        "key": ""locale_es_46json_234aa7ad"",
        "load": "() => import("#nuxt-i18n/234aa7ad" /* webpackChunkName: "locale_es_46json_234aa7ad" */)",
        "relative": "../es.json",
        "specifier": "#nuxt-i18n/234aa7ad",
      },
      {
        "cache": true,
        "importString": "import locale_es_45AR_46json_dab30c5d from "#nuxt-i18n/dab30c5d";",
        "key": ""locale_es_45AR_46json_dab30c5d"",
        "load": "() => import("#nuxt-i18n/dab30c5d" /* webpackChunkName: "locale_es_45AR_46json_dab30c5d" */)",
        "relative": "../es-AR.json",
        "specifier": "#nuxt-i18n/dab30c5d",
      },
    ],
    "fr": [
      {
        "cache": true,
        "importString": "import locale_fr_46json_3d83f3b3 from "#nuxt-i18n/3d83f3b3";",
        "key": ""locale_fr_46json_3d83f3b3"",
        "load": "() => import("#nuxt-i18n/3d83f3b3" /* webpackChunkName: "locale_fr_46json_3d83f3b3" */)",
        "relative": "../fr.json",
        "specifier": "#nuxt-i18n/3d83f3b3",
      },
    ],
    "ja": [
      {
        "cache": true,
        "importString": "import locale_ja_46json_5843ecf1 from "#nuxt-i18n/5843ecf1";",
        "key": ""locale_ja_46json_5843ecf1"",
        "load": "() => import("#nuxt-i18n/5843ecf1" /* webpackChunkName: "locale_ja_46json_5843ecf1" */)",
        "relative": "../ja.json",
        "specifier": "#nuxt-i18n/5843ecf1",
      },
    ],
  },
  "normalizedLocales": [
    {
      "code": "en",
    },
    {
      "code": "ja",
    },
    {
      "code": "fr",
    },
    {
      "code": "es",
    },
    {
      "code": "es-AR",
    },
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "i18nModules": [],
    "lazy": true,
    "locales": [],
  },
  "vueI18nConfigs": [
    {
      "importer": "() => import("#nuxt-i18n/c3216fe6" /* webpackChunkName: "config_to_c3216fe6" */)",
      "relative": "../../path/to",
      "specifier": "#nuxt-i18n/c3216fe6",
    },
  ],
}
`;

exports[`toCode: function (arrow) 1`] = `
{
  "localeLoaders": {},
  "normalizedLocales": [],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "i18nModules": [],
    "lazy": false,
    "locales": [
      {
        "code": "en",
        "testFunc": [Function],
      },
      {
        "code": "ja",
        "testFunc": [Function],
      },
      {
        "code": "fr",
        "testFunc": [Function],
      },
    ],
  },
  "vueI18nConfigs": [
    {
      "importer": "() => import("#nuxt-i18n/c3216fe6" /* webpackChunkName: "config_to_c3216fe6" */)",
      "relative": "../../path/to",
      "specifier": "#nuxt-i18n/c3216fe6",
    },
  ],
}
`;

exports[`toCode: function (named) 1`] = `
{
  "localeLoaders": {},
  "normalizedLocales": [],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "i18nModules": [],
    "lazy": false,
    "locales": [
      {
        "code": "en",
        "testFunc": [Function],
      },
      {
        "code": "ja",
        "testFunc": [Function],
      },
      {
        "code": "fr",
        "testFunc": [Function],
      },
    ],
  },
  "vueI18nConfigs": [
    {
      "importer": "() => import("#nuxt-i18n/c3216fe6" /* webpackChunkName: "config_to_c3216fe6" */)",
      "relative": "../../path/to",
      "specifier": "#nuxt-i18n/c3216fe6",
    },
  ],
}
`;

exports[`vueI18n option 1`] = `
{
  "localeLoaders": {
    "en": [
      {
        "cache": true,
        "importString": "import locale_en_46json_f7535dc0 from "#nuxt-i18n/f7535dc0";",
        "key": ""locale_en_46json_f7535dc0"",
        "load": "() => Promise.resolve(locale_en_46json_f7535dc0)",
        "relative": "../en.json",
        "specifier": "#nuxt-i18n/f7535dc0",
      },
    ],
    "fr": [
      {
        "cache": true,
        "importString": "import locale_fr_46json_3d83f3b3 from "#nuxt-i18n/3d83f3b3";",
        "key": ""locale_fr_46json_3d83f3b3"",
        "load": "() => Promise.resolve(locale_fr_46json_3d83f3b3)",
        "relative": "../fr.json",
        "specifier": "#nuxt-i18n/3d83f3b3",
      },
    ],
    "ja": [
      {
        "cache": true,
        "importString": "import locale_ja_46json_5843ecf1 from "#nuxt-i18n/5843ecf1";",
        "key": ""locale_ja_46json_5843ecf1"",
        "load": "() => Promise.resolve(locale_ja_46json_5843ecf1)",
        "relative": "../ja.json",
        "specifier": "#nuxt-i18n/5843ecf1",
      },
    ],
  },
  "normalizedLocales": [
    {
      "code": "en",
    },
    {
      "code": "ja",
    },
    {
      "code": "fr",
    },
  ],
  "nuxtI18nOptions": {
    "i18nModules": [],
    "lazy": false,
    "locales": [],
  },
  "vueI18nConfigs": [
    {
      "importer": "() => import("#nuxt-i18n/c3216fe6" /* webpackChunkName: "config_to_c3216fe6" */)",
      "relative": "../../path/to",
      "specifier": "#nuxt-i18n/c3216fe6",
    },
    {
      "importer": "() => import("#nuxt-i18n/c3216fe6" /* webpackChunkName: "config_to_c3216fe6" */)",
      "relative": "../../path/to",
      "specifier": "#nuxt-i18n/c3216fe6",
    },
    {
      "importer": "() => import("#nuxt-i18n/c3216fe6" /* webpackChunkName: "config_to_c3216fe6" */)",
      "relative": "../../path/to",
      "specifier": "#nuxt-i18n/c3216fe6",
    },
  ],
}
`;
